[package]
name = "bgpkit-cf-container"
version = "0.1.0"
edition = "2024"

[dependencies]

bgpkit-parser = { version = "0.11", features = ["serde"] }
bgpkit-broker = "0.7"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" , features = ["env-filter"]}
tower-http = { version = "0.6.6", features = ["trace"] }